istioocp4.3/helloworld-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v2
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
        version: v2
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
      - name: hello
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
        securityContext:
          privileged: true
        image: wardviaene/http-echo
        ports:
        - name: http
          containerPort: 8080
