istioocp4.3/helloworld-rbac-enable.yaml
#apiVersion: authentication.istio.io/v1alpha1
#kind: "MeshPolicy"
#metadata:
#  name: "default"
#spec:
#  peers:
#  - mtls: {}
#---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: "enable-mtls-dr"
  namespace: "default" # even though we specify a namespace, this rule applies to all namespaces
spec:
  host: "*.local"
  exportTo: []
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: DestinationRule
#metadata:
# name: "api-server"
#spec:
# host: "kubernetes.default.svc.cluster.local"
# trafficPolicy:
#   tls:
#     mode: DISABLE
