istioocp4.3/helloworld-v2-canaryrouting.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld-dr
spec:
  host: hello.istiodemo.svc.cluster.local 
  #host: hello.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-vs
spec:
  hosts:
  - "hello.test.com"
  gateways:
  - helloworld-gateway
  http:
  - match:
    - uri:
        prefix: /hellorohit
    - headers:
        end-user:
          exact: rohit 
    route:
    - destination:
        host: hello.istiodemo.svc.cluster.local        
        #host: hello.default.svc.cluster.local
        subset: v2 # match v2 only
        port:
          number: 8080
      weight: 70  
    - destination:
        host: hello.istiodemo.svc.cluster.local
        #host: hello.default.svc.cluster.local
        subset: v1 # match v1 only
        port:
          number: 8080
      weight: 30
