istioocp4.3/helloworld-v3-retries.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
        version: v3
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
      - name: hello
        image: wardviaene/http-echo
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
        securityContext:
          privileged: true
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v3-latency
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
        version: v3
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
      - name: hello
        image: wardviaene/http-echo
        resources:     
          limits:      
            cpu: 100m  
            memory: 128Mi
        securityContext:
          privileged: true
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld-dr
spec:
  host: hello.istiodemo.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworldretry-vs
spec:
  hosts:
  - "hello.testretry.com"
  gateways:
  - helloworld-gateway
  http:
  - route: # default route for hello.example.com
    - destination:
        host: hello.istiodemo.svc.cluster.local
        subset: v3 # match v3 only
        port:
          number: 8080
    timeout: 10s
    #retries:
    #  attempts: 3
    #  perTryTimeout: 2s
